test/testData/parser/negative/expressions/addressArith.err
test/testData/parser/negative/expressions/addressArith.c:22:14: error: '*STRUCT S1' and '*STRUCT S2' are not pointers to compatible types
test/testData/parser/negative/expressions/addressArith.c:23:14: error: arithmetic on a pointer to an incomplete type 'STRUCT S3'
test/testData/parser/negative/expressions/addressArith.c:24:14: error: '*STRUCT S1' and '*STRUCT S3' are not pointers to compatible types
test/testData/parser/negative/expressions/addressArith.c:30:14: error: '*signed int' and '*double' are not pointers to compatible types
test/testData/parser/negative/expressions/addressArith.c:31:14: error: '*signed int' and '**signed int' are not pointers to compatible types
test/testData/parser/negative/expressions/addressArith.c:36:14: error: '*double' and 'signed int[1]' are not pointers to compatible types
test/testData/parser/negative/expressions/addressArith.c:38:15: error: 'signed int[1]' and '(*signed int)[1]' are not pointers to compatible types
test/testData/parser/negative/expressions/addressArith.c:44:14: error: '*void' and '*signed int' are not pointers to compatible types
test/testData/parser/negative/expressions/addressArith.c:54:17: error: invalid operands to binary expression ('*signed int' and '*signed int')
test/testData/parser/negative/expressions/addressArith.c:55:17: error: invalid operands to binary expression ('*signed int' and 'float')
test/testData/parser/negative/expressions/addressArith.c:56:14: error: invalid operands to binary expression ('float' and '*signed int')
test/testData/parser/negative/expressions/addressArith.c:58:6: error: invalid operands to binary expression ('**signed int' and '*signed int')
test/testData/parser/negative/expressions/addressArith.c:62:25: error: arithmetic on a pointer to an incomplete type 'STRUCT S3'
test/testData/parser/negative/expressions/addressArith.c:63:29: error: arithmetic on a pointer to an incomplete type 'STRUCT S3'
test/testData/parser/negative/expressions/addressArith.c:64:27: error: arithmetic on a pointer to an incomplete type 'STRUCT S3'
test/testData/parser/negative/expressions/addressArith.c:65:35: error: arithmetic on a pointer to an incomplete type 'STRUCT S3'
test/testData/parser/negative/expressions/addressArith.c:72:17: error: invalid operands to binary expression ('*signed int' and 'float')
test/testData/parser/negative/expressions/addressArith.c:73:14: error: invalid operands to binary expression ('float' and '*signed int')
test/testData/parser/negative/expressions/addressArith.c:77:17: error: invalid operands to binary expression ('C signed int' and '*signed int')
test/testData/parser/negative/expressions/addressArith.c:77:3: error: redefinition of 'ptr1'
test/testData/parser/negative/expressions/addressArith.c:78:17: error: invalid operands to binary expression ('C signed int' and '*signed int')
test/testData/parser/negative/expressions/addressArith.c:78:3: error: redefinition of 'ptr2'
test/testData/parser/negative/expressions/addressArith.c:79:27: error: invalid operands to binary expression ('C signed int' and '*signed int')
test/testData/parser/negative/expressions/addressArith.c:81:23: error: arithmetic on a pointer to an incomplete type 'STRUCT S3'
test/testData/parser/negative/expressions/addressArith.c:82:27: error: arithmetic on a pointer to an incomplete type 'STRUCT S3'
test/testData/parser/negative/expressions/addressArith.c:83:24: error: arithmetic on a pointer to an incomplete type 'STRUCT S3'
test/testData/parser/negative/expressions/addressArith.c:84:33: error: arithmetic on a pointer to an incomplete type 'STRUCT S3'
